--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "usb_boot_kexec"
-version = "0.1.0"
+name = "usb_boot"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,3 +9,6 @@ edition = "2021"
 anyhow = "1.0.58"
 thiserror = "1.0.31"
 common = { path = "../common" }
+
+[profile.release]
+lto = "thin"
