--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.58"
-lazy_static = "1.4.0"
-regex = "1.6.0"
+clap = { version = "3.2.17", features = ["derive"] }
 thiserror = "1.0.31"
 
 [profile.release]
