--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.58"
 clap = { version = "3.2.17", features = ["derive"] }
 thiserror = "1.0.31"
+toml = "0.5.9"
 
 [profile.release]
 lto = "thin"
