--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,5 +11,9 @@ clap = { version = "3.2.17", features = ["derive"] }
 thiserror = "1.0.31"
 toml = "0.5.9"
 
+[dependencies.serde]
+version = "1.0.144"
+features = ["derive"]
+
 [profile.release]
 lto = "thin"
